server/vm-k8s/k8s/base/rss-bridge/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rss-bridge
spec:
  selector:
    app: rss-bridge
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
